--- a/about.html
+++ b/about.html
@@ -178,6 +178,11 @@ https://templatemo.com/tm-556-catalog-z
                                     class="fab fa-instagram"></i></a></li>
                         <li class="mb-2"><a href="https://www.youtube.com/@BazCreativemedia"><i
                                     class="fab fa-youtube"></i></a></li>
+                        <li class="mb-2"><a
+                                href="https://www.snapchat.com/add/bazcme?share_id=r5ou3AVbdLQ&locale=ar-EG"><i
+                                    class="fab fa-snapchat"></i></a></li>
+                        <li class="mb-2"><a href="https://www.tiktok.com/@bazcreativemedia"><i
+                                    class="fab fa-tiktok"></i></a></li>
                     </ul>
                     <a href="#" class="tm-text-gray text-right d-block mb-2">Terms of Use</a>
                     <a href="#" class="tm-text-gray text-right d-block">Privacy Policy</a>
