photo-detail-2.html

--- a/photo-detail-2.html
+++ b/photo-detail-2.html
@@ -193,7 +193,7 @@ https://templatemo.com/tm-556-catalog-z
     <div class="text-center" style="margin-bottom: 15px;">
         <a href="https://wa.me/966567296373" class="btn btn-primary">أطلب خدمة </a>
     </div>
-    <footer class="tm-bg-gray pt-5 pb-3 tm-text-gray tm-footer">
+   <footer class="tm-bg-gray pt-5 pb-3 tm-text-gray tm-footer">
         <div class="container-fluid tm-container-small">
             <div class="row">
                 <div class="col-lg-6 col-md-12 col-12 px-5 mb-5">
@@ -215,6 +215,11 @@ https://templatemo.com/tm-556-catalog-z
                                     class="fab fa-instagram"></i></a></li>
                         <li class="mb-2"><a href="https://www.youtube.com/@BazCreativemedia"><i
                                     class="fab fa-youtube"></i></a></li>
+                        <li class="mb-2"><a
+                                href="https://www.snapchat.com/add/bazcme?share_id=r5ou3AVbdLQ&locale=ar-EG"><i
+                                    class="fab fa-snapchat"></i></a></li>
+                        <li class="mb-2"><a href="https://www.tiktok.com/@bazcreativemedia"><i
+                                    class="fab fa-tiktok"></i></a></li>
                     </ul>
                     <a href="#" class="tm-text-gray text-right d-block mb-2">Terms of Use</a>
                     <a href="#" class="tm-text-gray text-right d-block">Privacy Policy</a>
